--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>todo-list-vuex</title>
-  </head>
+    <link href="//cdn.bootcss.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" rel="stylesheet">  </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
